Version final v1.2.1